added a couple of homework questions

--- a/Lesson1_restaurants/Restaurant Inspections.ipynb
+++ b/Lesson1_restaurants/Restaurant Inspections.ipynb
@@ -478,6 +478,17 @@
      "prompt_number": 54
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "There are so many questions to ask!\n",
+      "\n",
+      " * Where should I go to get burgers near NYU?\n",
+      " * How do burger restaurant scores compare, overall, to Japanese restaurants? Why might this be?\n",
+      " * Are there any cuisines for which the variance of scores is very high? Why do you think that might be the case?"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [],
