--- a/Lesson0_bridges_and_tunnels/Bridges and Tunnels.ipynb
+++ b/Lesson0_bridges_and_tunnels/Bridges and Tunnels.ipynb
@@ -1,12 +1,23 @@
 {
  "metadata": {
-  "name": ""
+  "name": "Bridges and Tunnels"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from pylab import *"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 15
+    },
     {
      "cell_type": "heading",
      "level": 2,
@@ -42,7 +53,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -57,7 +68,8 @@
      "input": [
       "import random\n",
       "\n",
-      "print random.choice(verrazano_data)"
+      "print random.choice(verrazano_data)\n",
+      "print f[2]"
      ],
      "language": "python",
      "metadata": {},
@@ -66,11 +78,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "(datetime.date(2012, 10, 12), 15279, 84600)\n"
+        "(datetime.date(2012, 12, 20), 14438, 84073)\n",
+        "58232\n"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 31
     },
     {
      "cell_type": "markdown",
@@ -94,15 +107,14 @@
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 21,
        "text": [
-        "15328.541176470588"
+        "15323.79060665362"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
