example stats import

--- a/Lesson1_restaurants/Restaurant Inspections.ipynb
+++ b/Lesson1_restaurants/Restaurant Inspections.ipynb
@@ -499,6 +499,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "from scipy import stats\n",
+      "\n",
       "n, min_max, mean, var, skew, kurt = stats.describe(random_data)\n",
       "print n # num of items in dataset\n",
       "print min_max # min and max values\n",
@@ -523,7 +525,7 @@
        ]
       }
      ],
-     "prompt_number": 76
+     "prompt_number": 79
     },
     {
      "cell_type": "markdown",
