adding link to original dataset

--- a/Lesson1_restaurants/Restaurant Inspections.ipynb
+++ b/Lesson1_restaurants/Restaurant Inspections.ipynb
@@ -19,7 +19,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "For today's project, we'll be using public restaurant inspection data from New York City. Specifically, we'll be looking at all inspection scores for _hamburger_ restaurants (yes, this is a category of restaurants).\n",
+      "For today's project, we'll be using [public restaurant inspection data](https://data.cityofnewyork.us/Health/Restaurant-Inspection-Results/4vkw-7nck) from New York City. Specifically, we'll be looking at all inspection scores for _hamburger_ restaurants (yes, this is a category of restaurants).\n",
       "\n",
       "First, let's load the data."
      ]
