updates from class

--- a/Lesson3_MarkovChains/Markov Chains and art.ipynb
+++ b/Lesson3_MarkovChains/Markov Chains and art.ipynb
@@ -151,7 +151,8 @@
       "            # ... pick something random\n",
       "        \n",
       "    fake_art.append(next_word)\n",
-      "    print  \"%s: %s\" % (j, ' '.join(fake_art))\n"
+      "    print  \"%s: %s\" % (j, ' '.join(fake_art))\n",
+      "    print \"\\n\"\n"
      ],
      "language": "python",
      "metadata": {},
@@ -160,30 +161,70 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "39: bean sieve was made from paper pulp combined with baskets, vases, birds, or butterflies. the overall design of copper teakettles was derived from a dark background and draped over his right hand as the center of the italian renaissance. the public\n",
-        "39: executed in the early part of dowry exchanges and displayed a brilliant glossy emerald green. originally, most of the early thirteenth-century francis of assisi and his patrons, the medici (text by margaret doyle, <strong>notes</strong> <a name=\"2\"></a> <a name=\"3\"></a> <a name=\"4\"></a> <a\n",
-        "39: cheaply. although stoneware will hold liquid without being glazed, in most cases it was a painter he specialized in small-scale luxury furniture, bernard was exceptionally versatile in technique. he used to produce his image. this technique, which he began to flourish.\n",
-        "39: that the paint surface has worn considerably, but the work could be described as one philadelphia gentleman joked, eakins &ldquo;would bring out all the painting created a variety of colors to reproduce the grayness of the earliest samplers were actually collections\n",
-        "39: darker, more muted shades of green, blue, yellow, and red, seemingly freshly picked. c&eacute;zanne felt especially drawn to the hero's triumphant salvation, a man warms his hands bound behind him in america, trumbull adapted his composition on earlier works in the\n",
-        "39: also served as architectural advisor to pope nicholas v. this bronze is probably one of the church of the marian antiphon, historians refer to the royal academy of design and embellished with curved points. a desire for the panel's use as\n",
-        "39: of contrasting tone: a dark foreground, through the soft dreaminess recently introduced by german immigrants in the remote franche-comt&eacute; region. a proponent of realism, he challenged traditional ideas about art largely by watching other english&ndash;trained painters who reveled in depicting winter.\n",
-        "39: 1891, he acquired while in italy for nine years in italy, rosso&rsquo;s personal, introverted style did not expand the small terracotta into a pad foot. the folding fan was used for opaque colors. these practices effectively blocked the full ability of\n",
-        "39: and ceiling, the parade of dark reddish brown, still visible in the early seventeenth century. dutch artists preferred monochromatic tones for their own distinct styles. although the identity of the slat often distinguishes the region in which all sides without leaving\n",
-        "39: veronica's veil had entered the haarlem guild in 1634, probably after studying under <em>the seine</em> <em>plum brandy</em> although this jar retains a lingering suggestion of a \"visiting dress,\" dated 1883, is made from fine, dense gray-blue or buff clay that is\n",
-        "39: made about seventy years old and remained there until january 1878. argenteuil proved to be cast. the minimal chasing and polishing that was enlarged by workshop assistants. whether the present gilt surface (not original) replaced original gilding or was applied to\n",
-        "39: that time. (text by kimberly jones, <strong>notes</strong> <a name=\"2\"></a> <a name=\"3\"></a> <a name=\"4\"></a> men's clothing of the coat is fastened at the far left, the shape of the little galleries of the eighteenth century are extremely rare before about 1425. this\n",
-        "39: also spoke german. ironically, the french chemist michel-eug&egrave;ne chevreul and charles ix. in this imposing secretary is a hollow framework built up his cloak to his love of hunting offered frequent opportunities. here, tiny figures praying at the royal academy in\n",
-        "39: leaving cephalus to wander the earth and orchard and softly blending strokes in the form of embroidery, which incorporated a great stimulus for his technical methods and personal referent when relating the use of light, however, shows the very men who\n",
-        "39: these laws. seurat developed his own rejection of london's royal academy, england's only major avenue for exhibiting or selling such narrative pictures. instead, he achieved fame for the marble-hard perfection and chilly hauteur of his work. most of his forms, the\n",
-        "39: purely for the 1889 international exposition marking the end of the painter and art during the second president was in his careful depiction of light under his immediate impression of a carp, its grotesque open-jawed head oriented downward and its harmonized\n",
-        "39: d'eau, shaped as a focus on sculpture; the thin stream of slip to achieve the concentric stripe paintings of aristocrats as opposed to literary subjects. much of their family wash to this tapestry, often described as pomegranate-shaped. (text by stephen little,\n",
-        "39: a black asphaltum varnish that imitated lacquer. the decoration and quilting are perfectly balanced to create a compact group in new mexico artists. the virgin, near collapse under the title &quot;improvisations&quot; refers to his popular one-work show. how copley had persuaded\n",
-        "39: changed soon after the civil war, most american dolls were made famous by such backwoods heroes as daniel boone and davy crockett. this patchbox cover was probably intended to be exhibited in 1918 at the stiegel furnace. the flask shown here\n",
-        "39: born in 1884 to an increase in population, housing construction, and manufacturing. the town\u2019s largest and most prominent. the two works, and in 1905 he exhibited alongside the fauves at the center, mary is wed to joseph. he was expelled from\n"
+        "0: artistic patronage. designing alexander's armor in the spring of 1818, he was an observer, a voyeur rather than celebrating nature in the past, probably because the pennsylvania german furniture is ornamented with carved shells at the age of seven. reynolds deliberately\n",
+        "\n",
+        "\n",
+        "1: posing her from behind, a friend of the counter-reformation climate that shadowed veronese's career. twice, the artist that he may have used it frequently. though more tightly woven than some overshot coverlets, the pine tree border. notice that the supplementary weft\n",
+        "\n",
+        "\n",
+        "2: gentle west wind. the sculpture completed in 2006 removed a dull brown coating of dirt and overpaint, revealing its original location remains unknown. famed as a determined, strong-minded child whose need for discipline he met constantin brancusi chiseled into the luminous\n",
+        "\n",
+        "\n",
+        "3: century. a student at the bottom of the front plate shows death in 1760. largilli&egrave;re's great facility with a copper plate with a moral lesson. this stove is dated 1830. as pennsylvania german. iron plantations, and later to the average florentine,\n",
+        "\n",
+        "\n",
+        "4: the fact that the spectator to adopt a working style in rome, although its style is typical of effects resulting from limited tools. the massive broken trees in the foreground, suggests the decay of the street teems with beggars, peddlers, and\n",
+        "\n",
+        "\n",
+        "5: house. toy makers invented many ingenious products. pennsylvannia german artists were forced to ponder watson's fate. miraculously, he was made in bucks county, pennsylvania. while patriotic symbols, such as the first pope to write the book of job (10:20) which begins,\n",
+        "\n",
+        "\n",
+        "6: banal or harsh. &ldquo;draw your material from the slightly disheveled suit; a drill to fashion magazines such as this were produced in 15th-century italy. motifs from one of only two known until the end of 1504. <em>saint george and the term\n",
+        "\n",
+        "\n",
+        "7: southern german province of alava, spain. the high chest stands on the memling worked primarily in the renaissance as a print medium, in which viewers could move around them. their surfaces were once completely polychromed, and traces of the conventional visualization\n",
+        "\n",
+        "\n",
+        "8: an unfinished wall, while mother and her children, to the flight of the portrayed at age 24. the french&ndash;born queen exerted a strong linear pattern and color. this is most often used for this work during his career; they reflect the\n",
+        "\n",
+        "\n",
+        "9: at the bottom. the spindles of carver and then studied drawing from life that where either in manet\u2019s studio or zola\u2019s home. but while the subject is the painter's skill, however, but a reality intensified by titian's broad, expressive brushstrokes. in\n",
+        "\n",
+        "\n",
+        "10: all its forms, from the book of courtly love they read together), rodin encouraged viewers to complete the masterpiece for his skill in controlling the thin walls. the realistic costumes of ancient sculpture. classical symmetry pervades the scene also conveys a\n",
+        "\n",
+        "\n",
+        "11: of arrows in each fountain is an alloy of copper oxide. in 1849, christopher webber fenton patented his method of advertising. this carving not only from their horses. a beggar woman with a heavily loaded brush. the energy in their detail.\n",
+        "\n",
+        "\n",
+        "12: model for the work of fantasy marks the marble in arnold b&ouml;cklin's at first sight, to extend the scene&rsquo;s meaning. the cloth, it was that of the seventeenth-century painter <em>the frankland sisters,</em> the story in a byzantine style is his superior\n",
+        "\n",
+        "\n",
+        "13: figures, personifying the seasons in mythological garb that watteau painted for the natural decorative quality of a wealthy middle class became art patrons in their awkward poses, their strain fueling the anguished pitch of the skirt are of self material in\n",
+        "\n",
+        "\n",
+        "14: filippino was assigned the task of finishing masaccio's great frescoes in the contours of ginevra's face is perfectly oval and her right hand raised in a variety of titles throughout the southeastern counties of pennsylvania german gunsmiths displayed their love of\n",
+        "\n",
+        "\n",
+        "15: trips to italy, as well as their name suggests, traced their origin to elijah in the montmartre neighborhood of paris and sketched at museums and landmarks throughout france, britain, and italy. moreover, he was employed to remove the royal family. zoffany&rsquo;s\n",
+        "\n",
+        "\n",
+        "16: trees. this double portrait of peter a. b. widener in london. embroidered rugs is the underlying principle. the sawtooth motif on the right of the west building were originally used for oil. this ecclesiastical vestment was made in the round suggests\n",
+        "\n",
+        "\n",
+        "17: who consistently depicted his subjects seated sideways, with their own right. arthur devis was a brilliant administrator who served as one of aesop's fables. in his youth as a religious confraternity. such while bellini began to explore painting in el greco's\n",
+        "\n",
+        "\n",
+        "18: several fans during his first excursion to brittany, spending three months in london as the chicken brought to america where it is also tinged with pale olive. the shaded room, while a menacing dragon emerges from the observer are necessary.\" escher\n",
+        "\n",
+        "\n",
+        "19: ascetic tendency toward grays and browns. omer talon (1595&ndash;1652), a liberal attorney general of the pervasive grace of god, emerging from a single religious figure or a sad old apple, i catch a glimpse of fire behind lucy alludes to the\n",
+        "\n",
+        "\n"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
