naive bayes example

--- a/Lesson4_BayesianStats/Naive Bayes Classifier.ipynb
+++ b/Lesson4_BayesianStats/Naive Bayes Classifier.ipynb
@@ -15,6 +15,9 @@
       "import string\n",
       "\n",
       "def FreqDist(words):\n",
+      "    \"\"\"\n",
+      "    FreqDist: Accepts a string of words and returns a dictionary of form {'word': count}\n",
+      "    \"\"\"\n",
       "    data = {}\n",
       "    for word in words.split():\n",
       "        data[word] = data.get(word, 0) + 1\n",
@@ -55,8 +58,7 @@
       "    def train_from_data(self, data):\n",
       "        for category, documents in data.items():\n",
       "            for doc in documents:\n",
-      "                self.train(doc, category)\n",
-      "                \n",
+      "                self.train(doc, category)   \n",
       "        # print self.feature_count\n",
       "        \n",
       "    def get_features(self, document):\n",
@@ -111,17 +113,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "IndentationError",
-       "evalue": "unindent does not match any outer indentation level (<ipython-input-68-aec0cfba2b15>, line 34)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-68-aec0cfba2b15>\"\u001b[0;36m, line \u001b[0;32m34\u001b[0m\n\u001b[0;31m    all_words_freq = FreqDist(document)\u001b[0m\n\u001b[0m                                       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-       ]
-      }
-     ],
-     "prompt_number": 68
+     "outputs": [],
+     "prompt_number": 73
     },
     {
      "cell_type": "code",
@@ -132,7 +125,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 69
+     "prompt_number": 74
     },
     {
      "cell_type": "code",
@@ -155,13 +148,14 @@
        ]
       }
      ],
-     "prompt_number": 70
+     "prompt_number": 75
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print nb.probability(\"dance draw arglebargle\", 'art')"
+      "print nb.probability(\"dance draw arglebargle\", 'art')\n",
+      "print nb.probability(\"dance draw arglebargle\", 'sports')"
      ],
      "language": "python",
      "metadata": {},
@@ -173,11 +167,15 @@
         "dance - art - 0.833333333333\n",
         "draw - art - 0.75\n",
         "arglebargle - art - 0.5\n",
-        "0.15625\n"
+        "0.15625\n",
+        "dance - sports - 0.833333333333\n",
+        "draw - sports - 0.25\n",
+        "arglebargle - sports - 0.5\n",
+        "0.0520833333333\n"
        ]
       }
      ],
-     "prompt_number": 72
+     "prompt_number": 77
     },
     {
      "cell_type": "code",
