example with nytimes article data

--- a/Lesson4_BayesianStats/Naive Bayes Classifier.ipynb
+++ b/Lesson4_BayesianStats/Naive Bayes Classifier.ipynb
@@ -32,13 +32,33 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "sentence = \"I like marshmallows and I like fruit.\"\n",
+      "print FreqDist(sentence)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "{'I': 2, 'marshmallows': 1, 'and': 1, 'fruit.': 1, 'like': 2}\n"
+       ]
+      }
+     ],
+     "prompt_number": 78
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "class NaiveBayesClassifier(object):\n",
       "    \n",
       "    def __init__(self):\n",
       "        self.feature_count = {}\n",
       "        self.category_count = {}\n",
       "    \n",
-      "    def probability(self, item, category):\n",
+      "    def probability(self, item, category): # P(art|words)\n",
       "        \"\"\"\n",
       "        probability: prob that an item is in a category\n",
       "        \"\"\"\n",
@@ -102,9 +122,9 @@
       "        return w_prob\n",
       "            \n",
       "    def train(self, item, category):\n",
-      "        print item\n",
+      "        #print item\n",
       "        features = self.get_features(item)\n",
-      "        print features\n",
+      "        #print features\n",
       "        \n",
       "        for f in features:\n",
       "            self.increment_feature(f, category)\n",
@@ -114,7 +134,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 73
+     "prompt_number": 111
     },
     {
      "cell_type": "code",
@@ -125,37 +145,40 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 74
+     "prompt_number": 112
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "data = {'art': [\"trumpet piano paint draw dance\"], 'sports': [\"dance swim fight\"]}\n",
+      "#data = {'art': [\"trumpet piano paint draw draw dance\"], 'sports': [\"dance swim fight\"]}\n",
+      "\n",
+      "data = {}\n",
+      "\n",
+      "f = open('politics.txt')\n",
+      "data['politics'] = [f.read()]\n",
+      "f.close()\n",
+      "\n",
+      "f = open('health.txt')\n",
+      "data['health'] = [f.read()]\n",
+      "f.close()\n",
+      "\n",
+      "\n",
       "nb.train_from_data(data)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "trumpet piano paint draw dance\n",
-        "{'dance': 1, 'paint': 1, 'piano': 1, 'trumpet': 1, 'draw': 1}\n",
-        "dance swim fight\n",
-        "{'dance': 1, 'swim': 1, 'fight': 1}\n"
-       ]
-      }
-     ],
-     "prompt_number": 75
+     "outputs": [],
+     "prompt_number": 113
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print nb.probability(\"dance draw arglebargle\", 'art')\n",
-      "print nb.probability(\"dance draw arglebargle\", 'sports')"
+      "tweet = \"eating well exercise moving around\"\n",
+      "\n",
+      "print nb.probability(tweet, 'politics')\n",
+      "print nb.probability(tweet, 'health')"
      ],
      "language": "python",
      "metadata": {},
@@ -164,18 +187,22 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "dance - art - 0.833333333333\n",
-        "draw - art - 0.75\n",
-        "arglebargle - art - 0.5\n",
-        "0.15625\n",
-        "dance - sports - 0.833333333333\n",
-        "draw - sports - 0.25\n",
-        "arglebargle - sports - 0.5\n",
-        "0.0520833333333\n"
+        "well - politics - 0.25\n",
+        "moving - politics - 0.5\n",
+        "eating - politics - 0.5\n",
+        "around - politics - 0.5\n",
+        "exercise - politics - 0.25\n",
+        "0.00390625\n",
+        "well - health - 0.75\n",
+        "moving - health - 0.5\n",
+        "eating - health - 0.5\n",
+        "around - health - 0.5\n",
+        "exercise - health - 0.75\n",
+        "0.03515625\n"
        ]
       }
      ],
-     "prompt_number": 77
+     "prompt_number": 114
     },
     {
      "cell_type": "code",
